# wlsnap

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  deny.toml  rust-toolchain.toml  typos.toml
.github/workflows/: ci.yml  release.yml
aur/: .SRCINFO  PKGBUILD  README.md  wlsnap.install
config/: config.example.toml
docs/: README.md
docs/dev/: 01-tech-spec.md  02-design.md  03-roadmap.md  v0.1.0-gap-analysis.md
docs/dev/refs/: wayscrollshot-markshot-reference.md
docs/superpowers/plans/: 2026-05-29-eframe-area-selector.md  2026-05-30-cli-headless-mode.md
docs/superpowers/specs/: 2026-05-29-eframe-area-selector-design.md
src/: app.rs  cli.rs  cli_action.rs  config.rs  constants.rs  error.rs  lib.rs  main.rs
src/backend/: capabilities.rs  mod.rs  protocol.rs  wlr.rs
src/capture/: mod.rs  output.rs  region.rs
src/image_engine/: history.rs  mod.rs  pixmap.rs  transform.rs
src/output_manager/: clipboard.rs  exec.rs  mod.rs  pipe.rs  save.rs
src/platform/: mod.rs  output_info.rs  wayland.rs
src/ui/: editor.rs  eframe_selector.rs  layer_selector.rs  mod.rs
